<resources>
    <string name="app_name">MyRecipe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_dish">Add Recipe</string>

    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time">Cooking time in minutes</string>
    <string name="lbl_recipe">Recipe</string>
    <string name="title_select_image">Select Image</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="title_select_dish_type">Select recipe type</string>
    <string name="title_select_dish_category">Select recipe category</string>
    <string name="title_select_dish_cooking_time">Select cooking time in minutes</string>

    <string name="err_msg_select_dish_image">Select or add an image</string>
    <string name="err_msg_enter_dish_title">Enter recipe title</string>
    <string name="err_msg_select_dish_type">Select recipe type</string>
    <string name="err_msg_select_dish_category">Select recipe category</string>
    <string name="err_msg_enter_dish_ingredients">Enter recipe ingredients</string>
    <string name="err_msg_select_dish_cooking_time">Select recipe cooking time</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter the recipe</string>
    <string name="label_no_recipes_added_yet">No recipes added yet</string>
    <string name="image_Description">Image Description</string>
</resources>